corrected some layout issues: homepage, itemsindexpage

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,5 +13,5 @@
 
 .navbar {
   padding: 10px 20px;
-  margin-top: -20px;
+  margin-top: -40px;
 }
