--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -30,7 +30,7 @@ body {
 
 .container-left {
   flex: 1 1 0;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   width: 50%;
 }
 
@@ -114,9 +114,9 @@ i.fa-solid {
 }
 
 
-.col-md-6 .search-form-container, button {
+/* .col-md-6 .search-form-container, button {
   margin-left: -58px;
-}
+} */
 .list-item-link:hover {
   color: white;
   animation: blink 1s infinite;
